# EdgeGateway

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_websocket_video_stream_test.sh  camera_tool  dev_board_log.md  dev_env.md  dev_log.md  development_log.txt  main_server.cpp  test_for_cam  test_websocket.js  test_websocket_simple  test_websocket_simple.cpp  websocket_video_fix.js  websocket_video_stream_test.cpp  websocket_video_test_fixed.html
backup/static/js/: camera.js  index.js  system.js
build_module_test/static/: hello.html  test.html
cmake/: FindCrow.cmake
config/: config.json
doc/: 4gb_memory_optimization_guide.md  API_DOCUMENTATION.md  README.md  advanced_architecture_design.md  ai_vision_processing_guide.md  api_design_guide.md  camera_workflow.md  coding_style_guide.md  current_development_status.md  dev_env.md  dev_log.md  project_architecture.md  project_overview.md  quick_dev_guide.md  rk3588_hardware_capability_assessment.md  single_camera_multi_tab_architecture.md  system_information_retrieval_guide.md  system_information_retrieval_guide_zh.md  unified-ui-style-guide.md
doc/architecture/: modular-server-design.md
docs/: dev_log.md  known_issues.md
include/api/: api_server.h  camera_api.h  crow_server.h  mjpeg_streamer.h  rest_handler.h  web_server.h  websocket_camera_streamer.h
include/camera/: camera_device.h  camera_manager.h  format_utils.h  frame.h  v4l2_camera.h
include/monitor/: logger.h  resource_monitor.h  system_monitor.h
include/storage/: archive_manager.h  file_manager.h  storage_manager.h
include/system/: system_monitor.h
include/utils/: config_manager.h  error_handler.h  file_utils.h  string_utils.h  time_utils.h
include/video/: ffmpeg_recorder.h  frame_converter.h  i_video_recorder.h  i_video_splitter.h  video_recorder.h  video_recorder_factory.h  video_splitter.h
include/vision/: frame_processor.h
include/web/: frame_extraction_routes.h  http_routes.h  system_routes.h  video_server.h  websocket_handler.h
referenceDoc/: dev_log.md
scripts/: build.sh  debug_segfault.sh  fix_all_logs.sh  fix_logging.sh  fix_v4l2_camera_logging.sh  gdb_command.txt  gdb_core_analysis.txt  monitor_mjpeg.sh  run_debug.sh  simple_debug.sh
src/: CMakeLists.txt  CMakeLists.txt_backup  main.cpp
src.bak.20250520162526/: main.cpp
src.bak.20250520162526/api/: camera_api.cpp  mjpeg_streamer.cpp  mjpeg_streamer.h  web_server.cpp
src.bak.20250520162526/camera/: format_utils.cpp  v4l2_camera.cpp
src.bak.20250520162526/monitor/: logger.cpp
src.bak.20250520162526/storage/: CMakeLists.txt  file_manager.cpp
src.bak.20250520162526/system/: system_monitor.cpp
src.bak.20250520162526/tools/: CMakeLists.txt
src.bak.20250520162526/utils/: config_manager.cpp  string_utils.cpp
src/api/: CMakeLists.txt  api_server.cpp  camera_api.cpp  crow_server.cpp  crow_server.cpp.backup  mjpeg_streamer.cpp  rest_handler.cpp  web_server.cpp  websocket_camera_streamer.cpp
src/camera/: CMakeLists.txt  camera_manager.cpp  format_utils.cpp  frame.cpp  v4l2_camera.cpp
src/monitor/: CMakeLists.txt  logger.cpp
src/storage/: CMakeLists.txt  file_manager.cpp  storage_manager.cpp
src/system/: CMakeLists.txt  system_monitor.cpp
src/tools/: CMakeLists.txt  camera_tool.cpp
src/utils/: CMakeLists.txt  config_manager.cpp  debug_utils.cpp  debug_utils.h  file_utils.cpp  time_utils.cpp
src/video/: CMakeLists.txt  ffmpeg_recorder.cpp  ffmpeg_splitter.cpp  video_recorder_factory.cpp
src/vision/: homography_processor.cpp  processing_pipeline.cpp  yolo_processor.cpp
src/web/: frame_extraction_routes.cpp  http_routes.cpp  serial_routes.cpp  serial_routes.h  system_routes.cpp  video_server.cpp  websocket_handler.cpp
static/: camera_select.html  camera_view.html  cameras.html  index.html  system_info.html  test_navigation.html  test_websocket_camera.html  test_websocket_simple.html
static/components/: navigation.html
static/css/: style.css  unified-style.css
static/js/: camera_view.js  index.js  main.js  navigation.js
static/pages/: basketball_recording.html  frame_extraction.html  photo_capture.html  serial_info.html  style-demo.html  system_info.html  video_recording.html  video_stream.html
tests/: CMakeLists.txt
tests/api_tests/: CMakeLists.txt  simple_server_test.cpp  static_page_test.cpp
